# Kimerith-WindHammer

./: .env.example  .gitignore  DDS_To_PNG.py  Pipfile  PrivacyPolicy.md  README.md  TermsOfService.md  itembot-main.code-workspace  pyproject.toml  runbot.bat  setup.cfg
bot/: __init__.py  __main__.py  bot.py  database.py  emojis.py
bot/extensions/: calc.py  fish.py  help.py  mobs.py  owner.py  pets.py  spells.py  statcaps.py  stats.py
bot/menus/: __init__.py  items.py
